 * #1020: Document a database use case involving a temporary database client container:
   https://torsion.org/borgmatic/docs/how-to/backup-your-databases/#containers
 * #1037: Fix an error with the "extract" action when both a remote repository and a
   "working_directory" are used.
 * #1044: Fix an error in the systemd credential hook when the credential name contains a "."
   character.
 * #1048: Fix a "no such file or directory" error in ZFS, Btrfs, and LVM hooks with nested
   directories that reside on separate devices/filesystems.
 * #1050: Fix a failure in the "spot" check when the archive contains a symlink.
 * #1051: Add configuration filename to "Successfully ran configuration file" log message.

1.9.14
 * #409: With the PagerDuty monitoring hook, send borgmatic logs to PagerDuty so they show up in the
   incident UI. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#pagerduty-hook
 * #936: Clarify Zabbix monitoring hook documentation about creating items:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#zabbix-hook
 * #1017: Fix a regression in which some MariaDB/MySQL passwords were not escaped correctly.
 * #1021: Fix a regression in which the "exclude_patterns" option didn't expand "~" (the user's
   home directory). This fix means that all "patterns" and "patterns_from" also now expand "~".
 * #1023: Fix an error in the Btrfs hook when attempting to snapshot a read-only subvolume. Now,
   read-only subvolumes are ignored since Btrfs can't actually snapshot them.

1.9.13
 * #975: Add a "compression" option to the PostgreSQL database hook.
 * #1001: Fix a ZFS error during snapshot cleanup.
 * #1003: In the Zabbix monitoring hook, support Zabbix 7.2's authentication changes.
 * #1009: Send database passwords to MariaDB and MySQL via anonymous pipe, which is more secure than
   using an environment variable.